--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "github": "^0.2.2",
     "github-api": "^0.7.0",
     "bluebird": "^2.3.6",
-    "request": "^2.46.0"
+    "request": "^2.46.0",
+    "temp": "^0.8.1",
+    "tmp": "0.0.24"
   }
 }
